CSS/header&footer.css
body {
    /* this is for mobile devices specially */
    overflow-x: hidden;
}

/* ------------------------------------------------------------------------------------------------------------------------------------ */

/* Header Starts Here */

header,
#header {
    height: 110px;
    width: 100%;
    background-color: var(--accent-color);
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    position: fixed;
    top: 0px;
    z-index: 10;
    transition: top 350ms ease-out;
}

/* media query for header height */
@media only screen and (max-width: 760px) {
    header {
        height: 90px;
    }
}

#header-title {
    justify-self: center;
    align-self: center;
    cursor: pointer;
}

/* media query for header title */

@media only screen and (max-width: 1260px) {
    #header-title {
        height: clamp(38px, 10vw, 60px);
        /* background-color: aqua; */
    }
}

@media only screen and (max-width: 760px) {
    #header-title {
        height: clamp(38px, 10vw, 60px);
        /* background-color: aqua; */
    }
}

#header-logo {
    justify-self: start;
    margin-left: 6.250vw;
    align-self: center;
}


/* media query for header logo */
@media only screen and (max-width: 1260px) {
    #header-logo {
        margin-left: 5vw;
        height: clamp(60px, 25vw, 80px);
    }
}

@media only screen and (max-width: 760px) {
    #header-logo {
        margin-left: 0;
        justify-self: center;
        height: clamp(60px, 11vw, 70px);
        /* background-color: aqua; */
    }
}

/* media query for header logo */
@media only screen and (max-width: 660px) {
    #header-logo {
        height: 30px;
        opacity: 0;
        /* background-color: aqua; */
    }
}

#header-nav {
    /* background-color: aquamarine; */
    justify-self: center;
    height: 70%;
    display: flex;
    justify-content: center;
    column-gap: 10px;
    align-items: center;
    color: white;
}

a:visited,
.nav-links:visited {
    color: white;
}

/* media query for header-nav */
@media only screen and (max-width: 1260px) {
    #header-nav {
        column-gap: 5px;
    }
}


#burger-menu {
    display: none;
    padding-inline-end: 30px;
    cursor: pointer;
}

/* media query for header navigation */

@media only screen and (max-width: 900px) {
    #header-nav {
        height: inherit;
        justify-self: end;
    }

    #header-nav>a {
        display: none;
    }

    #burger-menu {
        display: initial;
        justify-self: end;
        /* height: clamp(20px, 5vw, 25px); */
        height: 25px;
        /* margin-inline-end: 20px; */
    }
}

.nav-links:link {
    color: #fff;
    text-decoration: none;
    font-family: 'Cinzel', serif;
    font-size: 16px;
    font-weight: 700;
    letter-spacing: 0.080em;
}

/* Media query for .nav-links:link */
@media only screen and (max-width: 1260px) {
    .nav-links:link {
        font-size: 13.8px;
    }
}

/* Header ends here */

/* -------------------------------------------------------------------------------------------------------------------------------------------------- */

/* hero section starts here */

#hero-section {
    height: 32.407vh;
    margin-top: 110px;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: bottom;
    display: flex;
    justify-content: center;
    align-items: center;
}

/* media query for hero section */
@media only screen and (max-width: 760px) {
    #hero-section {
        margin-top: 90px;
    }
}

#hero-section-logo {
    display: none;
}

/* media query for hero section logo */
@media only screen and (max-width: 660px) {
    #hero-section-logo {
        display: initial;
        height: 100px;
        margin-bottom: 20px;
    }
}

#hero-section-heading {
    text-align: center;
}

#services-title {
    font-family: 'Playfair Display', serif;
    font-size: 3em;
    font-weight: 600;
    color: var(--accent-color);
}

/* media query for hero section title */
@media only screen and (max-width: 760px) {
    #services-title {
        font-size: 2em;
    }
}

#services-subtitle {
    font-family: 'Montserrat', sans-serif;
    font-weight: 500;
    font-size: 1.5em;
    color: var(--accent-color);
    margin-inline-start: 20px;
    margin-inline-end: 20px;
}

/* media query for hero section subtitle */
@media only screen and (max-width: 760px) {
    #services-subtitle {
        font-size: 1em;
    }
}

@media only screen and (max-height: 740px) {
    #services-subtitle {
        display: none;
    }
}

#hero-divider {
    min-height: 15px;
    max-height: 20px;
    background-color: var(--accent-color);
}

/* hero section ends here */

/* --------------------------------------------------------------------------------------------------------------------------- */






/* ---------------------------------------------------------------------------------------------------------------------------------------------------- */

/* footer starts here */

footer {
    display: grid;
    grid-template-rows: min-content 2fr 1fr;
    width: inherit;
    height: 540px;
    background-color: var(--dark-grey);
}

/* media query for footer */
@media only screen and (max-width: 900px) {
    footer {
        height: 1000px;
        justify-content: center;
    }
}



#footer-title {
    padding-top: 40px;
    margin-left: 100px;
    color: #fff;
    font-family: 'Cinzel', serif;
    font-size: 40px;
    font-weight: 400;
    letter-spacing: 0.080em;
}

/* media query for footer title */
@media only screen and (max-width: 1360px) {
    #footer-title {
        /* height: min-content; */
        font-size: 32px;
        /* display: none; */
    }
}

@media only screen and (max-width: 900px) {
    #footer-title {
        margin-left: 70px;
        font-size: 24px;
    }
}

#footer-links {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 20px;
    height: 300px;
    padding-inline-start: 100px;
    padding-inline-end: 100px;
    margin-block-start: 50px;
}
/* ... */

